--- a/network_interface_performance/network_interface_performance.yml
+++ b/network_interface_performance/network_interface_performance.yml
@@ -7,7 +7,7 @@ spec:
     name: network_host
     query: |-
         import "influxdata/influxdb/v1"
-        v1.measurementTagValues(bucket: "network_data", measurement: "net", tag: "host")
+        v1.measurementTagValues(bucket: "jpvlsmv's Bucket", measurement: "net", tag: "host")
     type: query
 ---
 apiVersion: influxdata.com/v2alpha1
@@ -18,7 +18,7 @@ spec:
     language: flux
     name: network_interface
     query: |-
-        from(bucket: "network_data")
+        from(bucket: "jpvlsmv's Bucket")
           |> range(start: -24h)
           |> filter(fn: (r) => r._measurement == "net")
           |> filter(fn: (r) => r.host == v.network_host)
@@ -47,7 +47,7 @@ spec:
           - query: |-
                 import "system"
                 import "influxdata/influxdb/v1"
-                data = from(bucket: "network_data")
+                data = from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field =~ /^bytes_/)
@@ -87,7 +87,7 @@ spec:
         position: overlaid
         queries:
           - query: |-
-                from(bucket: "network_data")
+                from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field == "drop_in" or r._field == "err_in")
@@ -99,7 +99,7 @@ spec:
                   |> map(fn: (r) => ({ r with _field: if r._field == "drop_in" then "Ingress Discards" else "Ingress Errors" }))
                   |> drop(columns: ["_start", "_stop"])
           - query: |-
-                from(bucket: "network_data")
+                from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field == "drop_out" or r._field == "err_out")
@@ -140,7 +140,7 @@ spec:
         position: overlaid
         queries:
           - query: |-
-                from(bucket: "network_data")
+                from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field == "packets_sent")
@@ -153,7 +153,7 @@ spec:
                   |> map(fn: (r) => ({ r with _value: r._value * -1.0 }))
                   |> drop(columns: ["_start", "_stop"])
           - query: |-
-                from(bucket: "network_data")
+                from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field == "packets_recv")
@@ -193,7 +193,7 @@ spec:
         position: overlaid
         queries:
           - query: |-
-                from(bucket: "network_data")
+                from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field == "bytes_sent")
@@ -206,7 +206,7 @@ spec:
                   |> map(fn: (r) => ({ r with _value: r._value * -8.0 }))
                   |> drop(columns: ["_start", "_stop"])
           - query: |-
-                from(bucket: "network_data")
+                from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field == "bytes_recv")
@@ -234,7 +234,7 @@ spec:
                 import "system"
                 import "influxdata/influxdb/v1"
                 
-                data =from(bucket: "network_data")
+                data =from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop:v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field =~ /^packets_/)
@@ -262,7 +262,7 @@ spec:
           - query: |-
                 import "system"
                 import "influxdata/influxdb/v1"
-                data = from(bucket: "network_data")
+                data = from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field =~ /^drop_/)
@@ -289,7 +289,7 @@ spec:
           - query: |-
                 import "system"
                 import "influxdata/influxdb/v1"
-                data = from(bucket: "network_data")
+                data = from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field =~ /^err_/)
@@ -320,7 +320,7 @@ spec:
         name: Active Interfaces
         queries:
           - query: |-
-                from(bucket: "network_data")
+                from(bucket: "jpvlsmv's Bucket")
                   |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
                   |> filter(fn: (r) => r._measurement == "net")
                   |> filter(fn: (r) => r._field == "bytes_sent" or r._field == "bytes_recv")
@@ -465,7 +465,7 @@ spec:
           token = "$INFLUX_TOKEN"
           ## Organization is the name of the organization you wish to write to; must exist.
           organization = "$INFLUX_ORG" ## Destination bucket to write into.
-          bucket = "network_data"
+          bucket = "jpvlsmv's Bucket"
           ## The value of this tag will be used to determine the bucket.  If this
           ## tag is not set the 'bucket' option is used as the default.
           # bucket_tag = ""
@@ -512,16 +512,6 @@ spec:
     name: Network Interface Monitoring
 ---
 apiVersion: influxdata.com/v2alpha1
-kind: Bucket
-metadata:
-    name: sleepy-napier-826001
-spec:
-    name: network_data
-    retentionRules:
-      - everySeconds: 604800
-        type: expire
----
-apiVersion: influxdata.com/v2alpha1
 kind: CheckThreshold
 metadata:
     name: relaxed-lewin-e50001
@@ -529,7 +519,7 @@ spec:
     every: 10m0s
     name: Network errors
     query: |-
-        from(bucket: "network_data")
+        from(bucket: "jpvlsmv's Bucket")
           |> range(start: v.timeRangeStart, stop: v.timeRangeStop)
           |> filter(fn: (r) => r["_measurement"] == "net")
           |> filter(fn: (r) => r["_field"] == "err_in")
